OEL-3325: Inpage z-index bug fix. [skip chromatic]

--- a/src/themes/default/src/scss/_inpage-navigation.scss
+++ b/src/themes/default/src/scss/_inpage-navigation.scss
@@ -1,6 +1,7 @@
 .bcl-sidebar:has(> .bcl-inpage-navigation) {
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 .bcl-inpage-navigation {
   top: 0;
